@@ -1,5 +1,10 @@
 2006-07-18  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/28337
+	* g++.dg/template/string1.C: New test.
+
+2006-07-18  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/28048
 	* g++.dg/template/defarg9.C: New test.
 
